# gpu_interval

./: README.md  RandomInitalGuess.csv  gaol_gpu  gaol_gpu.cpp  gpu_interface.h  gpu_kernels.cu  makefile
all_probs/: 10000_cvxbqp1.txt  10000_liarwhd.txt  10000_nondquar.txt  10000_nonscomp.txt  10000_quartc.txt  10000_srosenbr.txt  10000_tridia.txt  10000_woods.txt  1000_bdqrtic.txt  1000_biggsb1.txt  1000_chenhark.txt  1000_penalty1.txt  1000_pentdi.txt  1000_power.txt  1003_bratu1d.txt  100_arglina.txt  100_fletchcr.txt  100_harkerp2.txt  100_penalty2.txt  100_s299.txt  100_s302.txt  100_s305.txt  100_vardim.txt  1024_fminsrf2.txt  1024_fminsurf.txt  1024_msqrtals.txt  1024_msqrtbls.txt  1089_minsurf.txt  10_Expo.txt  10_Neumaier3.txt  10_Paviani.txt  10_Shekelfox10.txt  10_arglinb.txt  10_brownal.txt  10_dixon3dq.txt  10_extrosnb.txt  10_hilberta.txt  10_hs110.txt  10_s281.txt  10_s282.txt  (+286 more)
btp_test_problems/cpp_solutions/Gaol_Results/GGN_A1_Modified/: 100_harkerp2.csv  10_brownal.csv  1_ex4_1_1.csv  20_s303.csv
interval_gpu/: CMakeLists.txt  README.md  main.cu  main2.cu  main_working.cu  string_code.cu
